Added exception handling and global exception